[tool.poetry]
name = "secure-data-encryption"
version = "0.1.0"
description = "A simple Streamlit-based data protection app"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.0"
cryptography = "^42.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"